--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -49,7 +49,7 @@ body {
   position: fixed;
   background-color: rgba(0,0,0,0.6);
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
-  z-index: 999;
+  z-index: 10;
 } 
 
 /*--------------------------------------Home button--------------------------------------*/
@@ -63,7 +63,6 @@ body {
   font-size:2rem;
   line-height: 100px;
   font-weight:500;
-  z-index:1;
   text-decoration: none;
   color:orange;
   padding: 40px;
@@ -75,7 +74,7 @@ body {
 .main-header {
   line-height: 100px;
   float: left;
-  z-index: 1000;
+  z-index: 5;
   margin-left: 170px;
   
 }
@@ -160,29 +159,51 @@ nav ul ul li:hover a {
   -webkit-transition:ease-in all 200ms;
 }
 
+/*--------------------------------------- Side Bar ------------------ */
+.sidebar {
+  position: fixed;
+  float: right;
+  top:0px;
+  margin-top:100px;
+  right:0px;
+  z-index: 6;
+  background-color: #000C17;
+}
+
+
+.extra-button {
+  margin-right: 20px;
+  margin-top: 21px;
+  padding: 5px;
+  cursor: pointer;
+  float: right;
+  z-index: 9;
+}
+
+.extra:hover {
+  color:orange;
+}
+
 /*--------------------------------------- Buttons ------------------ */
 
 .buttons {
-  position: fixed;
-  float: right;
-  right:0;
-  margin: 0;
-  z-index: 1000;
-  line-height: 100px;
-  font-size:1rem;
+  display: none;
+  height: 1000px;
+  line-height: 75px;
+  box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
 }
 
 .buttons ul {
   margin: 0;
 }
 .buttons ul li {
-  display: inline;
+  list-style: none;
 }
 
 .buttons ul li a {
   text-align:center;
   padding:10px;
-  margin: 5px;
+  font-size:1rem;
 }
 
 .new-post {
@@ -191,7 +212,7 @@ nav ul ul li:hover a {
 }
 
 .buttons ul li a:hover {
-  color: #ccc;
+  color: orange;
 }
 
 
@@ -228,7 +249,7 @@ nav ul ul li:hover a {
   margin:0.4%;
   text-decoration: none;
   border-radius: 0px;
-  z-index: 50;
+  z-index: 3;
 }
 
 .post-container img {
@@ -273,7 +294,7 @@ iframe {
   width:100%;
   opacity: 0;
   transition: ease-in all 100ms;
-  z-index:9999;
+  z-index:4;
   /*line-height: 490px;*/
   /*text-align: center;*/
 }
@@ -321,7 +342,7 @@ iframe {
   right:0px;
   position:fixed;
   background-color: rgba(0,0,0,0.7);
-  z-index:99999;
+  z-index:7;
 } 
 
 .footer a {                 
