--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500,700,900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/evil-icons/1.7.2/evil-icons.min.css">
+<script src="//cdn.jsdelivr.net/evil-icons/1.7.2/evil-icons.min.js"></script>
 
 
   <!--<script src="http://use.typekit.net/koq1kyb.js"></script>
@@ -70,7 +72,15 @@
           </li> 
         </ul>
       </nav>
+
+      <div class="extra-button" >
+        <%= evil_icon 'ei-navicon', size: :m, class: "extra" %>
+      </div>
       
+    </div>
+
+    <div class="sidebar" >
+
         <div class="buttons">
             <ul>
                  <% if current_user.try(:admin?) %>
@@ -83,9 +93,9 @@
                       <li><%= link_to 'Login', new_user_session_path, class: 'new-post'  %> </li>
                   <% end %>
             </ul>
-        </div>   
+        </div>  
 
-    </div>
+      </div>
 
 	<div class="content">
       <%= yield %>
@@ -107,6 +117,12 @@
 <!-- - - - - - - - -  - - - - - - - - - - - - - - java - - - - - - - - - - - - - - - - - - - - - - - - -->    
 <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
+<script>
+$('.extra-button').click(function(){
+   $('.buttons').toggle();
+   // $('.buttons').toggleClass('clicked');
+});
+</script>
 
 <script>
   function play(object){
@@ -119,28 +135,30 @@
 
 
 
-<script>
+ <script>
      $(window).on('scroll', function () {
         var scrollTop = $(window).scrollTop();
         var timedure = 400
         if (scrollTop > 250) {
+            $('.extra-button').stop().animate({marginTop: "-5px"},timedure);
             $('.logo a').stop().animate({fontWeight: "400"},timedure);
             $('.header').stop().animate({height: "50px"},timedure);
             $('.logo a').stop().animate({padding: "18px"},timedure);
             $('.logo a').stop().animate({lineHeight: "50px"},timedure);
             $('.main-header').stop().animate({lineHeight: "50px"},timedure);
-            $('.buttons').stop().animate({lineHeight: "50px"},timedure);
+            $('.sidebar').stop().animate({marginTop: "50px"},timedure);
         }
         else {
+             $('.extra-button').stop().animate({marginTop: "21px"},timedure);
              $('.logo a').stop().animate({fontWeight: "500"},timedure);
              $('.header').stop().animate({height: "100px"},timedure);  
              $('.logo a').stop().animate({padding: "30px"},timedure);
              $('.logo a').stop().animate({lineHeight: "100px"},timedure);
              $('.main-header').stop().animate({lineHeight: "100px"},timedure);
-             $('.buttons').stop().animate({lineHeight: "100px"},timedure);
+             $('.sidebar').stop().animate(marginTop: "100px"},timedure);
         }
      });
-     </script>
+//      </script>
 
 
 </body>
