--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -49,7 +49,7 @@ body {
   position: fixed;
   background-color: rgba(0,0,0,0.6);
   box-shadow: 0 0 10px 0 rgba(0,0,0,0.5);
-  z-index: 10;
+  z-index: 8;
 } 
 
 /*--------------------------------------Home button--------------------------------------*/
@@ -160,17 +160,28 @@ nav ul ul li:hover a {
 }
 
 /*--------------------------------------- Side Bar ------------------ */
-
-.extra-button {
+.header-icon-container{
   position: fixed;
   top:0;
   right: 0;
-  margin:25px;
   height: 50px;
   cursor: pointer;
   float: right;
   z-index: 13;
+  
 }
+
+.extra-button {
+  margin:25px;
+  float: right;
+  z-index: 13;
+}
+.search-container {
+  float: right;
+  z-index: 8;
+  margin-top: 25px;
+}
+
 
 .extra-button:hover {
   color:orange;
@@ -192,18 +203,18 @@ nav ul ul li:hover a {
  z-index: 11;
 }
 
-.buttons {
+.sidebar-buttons {
   line-height: 75px;
 }
 
-.buttons ul {
+.sidebar-buttons ul {
   margin: 0;
 }
-.buttons ul li {
+.sidebar-buttons ul li {
   list-style: none;
 }
 
-.buttons ul li a {
+.sidebar-buttons ul li a {
   text-align:center;
   padding:10px;
   font-size:1rem;
@@ -214,7 +225,7 @@ nav ul ul li:hover a {
   color:#fff;
 }
 
-.buttons ul li a:hover {
+.sidebar-buttons ul li a:hover {
   color: orange;
 }
 
