--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,8 @@
   <div class="wrapper">
   <div class="dimmer" data-sidebar-dimmer></div>
 
-  
   <div class="cover-photo">
-                <img src="https://images.unsplash.com/photo-1428278953961-a8bc45e05f72?q=80&amp;fm=jpg&amp;s=24f29a71c4de9b922e7ee2cb5ee46f4b" alt="Cover 1"/>
+            <img src="https://images.unsplash.com/photo-1428278953961-a8bc45e05f72?q=80&amp;fm=jpg&amp;s=24f29a71c4de9b922e7ee2cb5ee46f4b" alt="Cover 1"/>
   </div>
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
@@ -76,13 +75,23 @@
       </nav>
     </div>
 
-     <div class="extra-button" data-sidebar-button>
-        <%= evil_icon 'ei-navicon', size: :m, class: "extra" %>
+    <div class="header-icon-container">
+          
+          <div class="extra-button" data-sidebar-button>
+              <%= evil_icon 'ei-navicon', size: :m, class: "extra-icon" %>
+              +
+          </div>
+
+          <div class="search-container">
+            <%= evil_icon 'ei-search', size: :m, class: "search-icon" %>
+            -
+          </div>
+
       </div>
 
     <div class="sidebar" data-sidebar>
 
-        <div class="buttons">
+        <div class="sidebar-buttons">
             <ul>
                  <% if current_user.try(:admin?) %>
                       <li><%= link_to 'New Post' , new_post_path , class: 'new-post' %></li>
