--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -176,10 +176,21 @@ nav ul ul li:hover a {
   float: right;
   z-index: 13;
 }
+
+.extra-button i{
+  font-size: 2.5rem;
+  line-height: 50px;
+}
+
 .search-container {
   float: right;
   z-index: 8;
   margin-top: 25px;
+}
+
+.search-container i{
+  font-size: 2.5rem;
+  line-height: 50px;
 }
 
 
