--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 
+
 <meta name="description=" content="A library of inspiring, engaging and informative media, bringing together the very best of the freely available sources of education from all corners of the web (Mostly YouTube.)
                         TEA is a nearly endless supply of enlightening content. We believe there is no limit to the ability of online media to inspire, educate and make people Healthier Wealthier and Wiser.">
     
@@ -78,11 +79,11 @@
     <div class="header-icon-container">
           
           <div class="extra-button" data-sidebar-button>
-              <%= evil_icon 'ei-navicon', size: :m, class: "extra-icon" %>
+            <i class="fa fa-bars"></i>
           </div>
 
           <div class="search-container">
-            <%= evil_icon 'ei-search', size: :m, class: "search-icon" %>
+            <i class="fa fa-search search-icon"></i>
           </div>
 
       </div>
