--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,17 +32,26 @@
   </div>
 
     <div class="header" onmouseover="document.body.style.overflow='hidden';" onmouseout="document.body.style.overflow='auto';">
-        
-          <div class="logo"><%= link_to 'TEA.', root_path %></div>
-                  
-     <nav class="main-header center">
-        <ul>
-                <% @category.each do |category|%>
-                    <li><%= link_to category.name, root_path(name: category.name)%></li>
-                  <%end%>
-          </ul>
-      </nav>
-    </div>
+    
+      <div class="logo"><%= link_to 'TEA.', root_path %></div>
+
+      <div class="tag-container center">
+          <div class="tag-wrap">
+                <h3 class="tag-title">Tags</h3>
+                <i class="fa fa-tags tags-button"></i>
+          </div>
+          <div class="category-tags center">  
+              <nav >
+                <ul>  
+                      <li> <%= link_to 'All', root_path, class: 'categories'  %></li>
+                      <% Category.all.each do |category|%>
+                          <li><%= link_to category.name, root_path(name: category.name), class: 'categories' %></li>
+                        <%end%>
+
+                </ul>
+              </nav>
+          </div>
+      </div>
 
       <div class="extra-button" data-sidebar-button>
             <i class="fa fa-bars extra-icon"></i>
@@ -62,6 +71,8 @@
       <div class="search-button">
             <i class="fa fa-search search-icon"></i>
       </div>
+
+    </div>
 
 
     <div class="sidebar" data-sidebar>
