--- a/app/assets/stylesheets/_forms.scss
+++ b/app/assets/stylesheets/_forms.scss
@@ -267,7 +267,7 @@
 
 .url-error, .url-error-duplicate, .tag-error, .tag-error-blank {
 	background-color: $white;
-	left:38vw;
+	left:38%;
 	padding: 5px 10px ;
 	z-index: 5;
 	border-style: solid;
@@ -276,42 +276,38 @@
 }
 
 .url-error, .url-error-duplicate {
-	top: 26.5vh;
+	top: 180px;
 }
 
 .tag-error {
-	top: 65.9vh;
+	top: 447px;
 }
 
 .tag-error-blank {
-	top: 43vh;
+	top: 292px;
 }
 
 
 .error-triangle, .error-triangle2, .error-triangle3 {
-	width: 0; 
-	height: 0; 
+	width: 0;
+	height: 0;
 	z-index: 5;
 	border-left: 11px solid transparent;
 	border-right: 11px solid transparent;
 	border-top: 11px solid $white;
+	position: absolute;
+	left: 40%;
 }
 	
 .error-triangle {
-	top: 30.8vh;
-	left: 40vw;
-	position: absolute;
+	top: 209px;
 }
 
 .error-triangle2 {
-	top: 70.2vh;
-	left: 40vw;
-	position: absolute;
+	top: 476px;
 }
 
 .error-triangle3 {
-	top: 47.3vh;
-	left: 40vw;
-	position: absolute;
+	top: 321px
 }
 
