--- a/app/assets/stylesheets/_contributions.scss
+++ b/app/assets/stylesheets/_contributions.scss
@@ -1,3 +1,87 @@
-// Place all the styles related to the contributions controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - -  - - - Contributions - - -  - - - - - - - - - - - - - - - - - - - - - - -  */
+/* - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -  */
+
+.main-view {
+	background-color: rgba(0,0,0, 0.5);
+	width: 90%;
+	position: absolute;
+	top:220px;
+	left:0;
+    	right:0;	
+    	margin-left:auto;
+    	margin-right:auto;
+	padding: 20px;
+	-webkit-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+	-moz-box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+	box-shadow: 0px 0px 180px -34px rgba(0,0,0,0.75);
+	
+
+	.column-headers {
+		left:0;	
+		right: 0;
+		margin-left:auto;
+    		margin-right:auto;
+		text-align: center;
+		margin: 0;
+		
+		a {
+			text-decoration:none;
+			color:$white;
+			font-size: 15px;
+		}
+
+		.table-wrap {
+			border-bottom:1px solid $white;
+		}
+
+		.view-header {
+			width:35%;
+			height:30px;
+			line-height: 30px;
+			float: left;
+			
+			h2 {
+				margin: 0;
+				color:$purple;
+			}
+		}
+
+		.view-header-small {
+			width:15%;
+			height:30px;
+			line-height: 30px;
+			float: left;
+			
+			h2 {
+				margin: 0;
+				color:$purple;
+			}
+		}
+		
+
+		.view-column {
+			width:35%;
+			height:40px;
+			line-height: 40px;
+			float: left;
+			overflow:hidden;	
+			
+			.view-url:hover {
+				text-decoration:underline;				
+			}
+		}
+		.view-column-small {
+			width:15%;
+			height:40px;
+			line-height: 40px;
+			float: left;
+			overflow:hidden;	
+
+			
+			.view-url:hover {
+				text-decoration:underline;				
+			}
+		}
+	}
+}
