--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,11 +25,13 @@
 
     <% if current_page?("/about") || current_page?("/contact_us") || current_page?("/help") || current_page?("/copyright") %>
       <%= render 'static_header' %>
-      <%= render 'static_cover' %>
+      <%= render 'cover' %>
       <% else %>
           <%= render 'header' %>
           <% if params[:name].present? || current_page?("/top_videos") || current_page?("/latest") || current_page?('/profile') %>
                 <%= render 'short_cover' %>
+          <% elsif current_page?("/") || current_page?("/posts") %>
+                <%= render 'home_cover' %>
           <% else %>
                 <%= render 'cover' %>
           <% end  %>
