--- a/app/assets/stylesheets/_profile.scss
+++ b/app/assets/stylesheets/_profile.scss
@@ -4,12 +4,17 @@
 	    position: absolute;
 	    top: 15%;
 	    left: 0;
-	    width: 100px;
-	    height: 100px;
+	    width: 75px;
+	    height: 75px;
 	    margin-left: auto;
 	    margin-right: auto;
 	    right: 0;
 	    border-radius: 50%;
+	    
+	    	@include breakpoint(small) {
+		           width: 100px;
+	    		height: 100px;
+              	}
 	}
 
 	h4 {
@@ -21,12 +26,15 @@
 		margin-left: auto;
 		margin-right: auto;
 		right: 0;
-		font-size: 3rem;
+		font-size: 2em;
 		font-weight:300;
 		color:$white;
 		border-bottom:2px solid $white;
 		border-top:2px solid $white;
 		
+		@include breakpoint(small) {
+		                font-size: 3rem;
+              	}
 		
 	}
 	
