--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -74,8 +74,20 @@ body {
 }
 
 .center {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
   justify-content: center;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
   align-items: center;
 }
 
@@ -100,7 +112,7 @@ body {
   position:fixed;
   background-color:$purple;
   box-shadow:0 0 90px 0 rgba(0,0,0,0.4);
-  z-index:8;
+  z-index:10;
   opacity: 0.98;
   top: 0;
   transition: top 0.5s ease-in-out;
@@ -934,6 +946,11 @@ body {
     z-index:-1;
 
 }
+.homepage-hero-module {
+    border-right: none;
+    border-left: none;
+    position: relative;
+}
 .no-video .video-container video,
 .touch .video-container video {
     display: none;
@@ -942,11 +959,13 @@ body {
 .touch .video-container .poster {
     display: block !important;
 }
+
 .video-container {
     position: relative;
     bottom: 0%;
     left: 0%;
     height: 100%;
+    width: 100%;
     overflow: hidden;
     background: #000;
 }
@@ -960,9 +979,14 @@ body {
     position: absolute;
     background: rgba(0, 0, 0, 0.4);
     width: 100%;
-    height: 100%;
+}
+.video-container video {
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
 }
 .video-container video.fillWidth {
+    width: 100%;
 }
 
 
